--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -75,3 +75,12 @@ jobs:
         run: ls
       - name: Deploy
         run: echo "Deploying..."
+  report: 
+    runs-on: ubuntu-latest
+    if: failure()
+    steps:
+      - name: output Information
+        run: |
+          echo "Something went wrong"
+          echo "${{ github }}"
+
