--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -77,7 +77,7 @@ jobs:
         run: echo "Deploying..."
   report: 
     runs-on: ubuntu-latest
-    needs: [test,deploy]
+    needs: [lint,deploy]
     if: failure()
     steps:
       - name: output Information
